# imf-importer-plugin

./: README.md  main.py  pyproject.toml
examples/: how-to-use-plugin.ipynb
imf_importer/: _compliance.py  _imf2data_model.py  _parsing.py  importer.py  plugin.py
