# [build-system]
# requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neat-imf-importer-plugin"
version = "0.1.0"
description = "IMF Importer Plugin for NEAT"
authors = [
    {name="Bård Henning Tvedt", email="bard.tvedt@webstep.no"},
    {name="Arne Måge", email="arne.mage@webstep.no"},
    {name="Nikola Vasiljevic", email="nikola.vasiljevic@cognite.com"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cognite-neat",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.uv.sources]
cognite-neat = { git = "https://github.com/cognitedata/neat.git", branch = "plugin-system" }



[project.entry-points."cognite.neat.core.plugins.data_model.importers"]
imf = "imf_importer.plugin:IMFDataModelImporter"