[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neat-imf-importer-plugin"
version = "0.1.1"
description = "IMF Importer Plugin for NEAT"
authors = [
    {name="Bård Henning Tvedt", email="bard.tvedt@webstep.no"},
    {name="Arne Måge", email="arne.mage@webstep.no"},
    {name="Nikola Vasiljevic", email="nikola.vasiljevic@cognite.com"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cognite-neat>=0.123.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[project.entry-points."cognite.neat.plugins.data_model.importers"]
imf = "imf_importer.plugin:IMFDataModelImporterPlugin"
